Local/k8s/base/06-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: container-team2a
spec:
  type: ClusterIP
  selector:
    app: app-web
  ports:
    - port: 80
      targetPort: 5000
